# sensor_ppg

./: LICENSE.txt  Makefile  README.md  dev02.py  sdkconfig
common/cmsis/: cmsis_version.h
dsp_lib/: arm_math.h
esp8266/: CMakeLists.txt  README.md  comm_spi.c  esp_32_test_fft.c  mqlistner.py
esp8266/main/: CMakeLists.txt  main.c
esp8266/main/dvr/: comm_spi.c  comm_spi.h  display.c  i2c_helper.c  per_intr.c  per_intr.h
esp8266/main/network/: cert.pem  mqtt_app.c  mqtt_app.h  network.c  network.h  ssid_reset.c  ssid_reset.h  wifi_config.c  wifi_config.h
main/: CMakeLists.txt  component.mk  hamming.h  main.c  process.c  process.h
main/dvr/: display.c  display.c.bak  display.h  i2c_helper.c  i2c_helper.h  interr_event.c  interr_event.h  ledconf.c  ledconf.h  per_intr.c  per_intr.h
main/network/: key.pem  mqtt_app.c  mqtt_app.h  network.c  network.h  wifi_config.c  wifi_config.h
pointertoaperson.github.io/: index.md
python_simulation/: README.md  adc_20ms_log.py  animated_simulation.py  simulation.py
signal_simulation_due/: README.md  signal_generator_due.ino  signal_noise.py
src/: Makefile  README.md  hamming.h  main.c  main.c.bak
src/drivers/: adc.c  adc.h  intrr_event.c  ledconf.c  ledconf.h  spi.c  spi.h  trig_tim_adc.h  uart.h
src/dvr/: adc.c  adc.h  display.c  display.h  i2c.c  i2c.h  process_sequence.c  process_sequence.h  sensor_ppg.h
stm32_dsp/: README.md  STM32F103XD_FLASH.ld
stm32_dsp/common/cmsis/: cmsis_armcc.h  (+1 more)
stm32_dsp/esp8266/: comm_spi.h  display.c  display.h  i2c_helper.h  main.c
stm32_dsp/src/: adc_20ms_log.h  main.c
(+7 files in other folders)
